--- a/src/css/cards.css
+++ b/src/css/cards.css
@@ -1,33 +1,25 @@
-.card {
-    padding: var(--p-25);
-    display: grid;
+.card-experience, .card-text, .card-project {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
     gap: var(--g-10);
-    background-color: var(--bg-1);
     position: relative;
-    border: var(--border-solid-1);
+    padding: var(--p-25);
+    background-color: transparent;
     border-radius: var(--rd-20);
+    overflow: hidden;
+    backdrop-filter: blur(80px);
+    outline: 1px solid var(--br-2);
+    box-shadow: inset 10px 10px 100px var(--fg-b-4);
 
-    span {
-        font-weight: 700;
-        color: var(--fg-3);
-        text-transform: uppercase;
-        font-size: 12px;
+    a { border: 1px solid var(--br-3); background-color: var(--bg-3); }
+
+    .title {
+        color: var(--fg-1);
+        font-weight: 500;
+        font-size: var(--sz-3);
     }
-    
-    .cont-text {
-        width: 100%;
-        display: flex;
-        align-items: center;
-        gap: var(--g-10);
-    }
-    
-    .title { 
-        font-size: var(--sz-2); 
-        text-transform: uppercase;
-        stroke-width: 0.5px;
-        -webkit-text-stroke-width: 0.5px;
-    }
-    
+
     p { 
         color: var(--fg-2);
         display: -webkit-box;
@@ -36,78 +28,262 @@
         text-overflow: ellipsis;
         overflow: hidden;
     }
-}
 
-.card-experience {
-    .cont-text {
-        display: grid;
-        gap: var(--g-15);
-
-        ul {
-            display: grid;
-            gap: var(--g-8);
-            padding-left: calc(var(--p-20));
-            li { color: inherit; font-weight: 700; }
-        }
-    }
-}
-
-.cardProject {
-    padding: var(--p-25);
-    display: grid;
-    gap: var(--g-10);
-    background-color: var(--bg-1);
-    position: relative;
-    border: var(--border-solid-1);
-    border-radius: var(--rd-20);
-    overflow: hidden;
-
-    .cont-text {
-        display: grid;
-        gap: var(--g-10); 
-        overflow: hidden;
-        z-index: 10;
-
-        div { display: flex; align-items: center; gap: var(--g-15); }
-
-        .title {
-            width: 100%;
-            color: var(--fg-1);
-            font-size: var(--sz-2);
-        }
-
-        p {
-            color: var(--fg-2);
-            display: -webkit-box;
-            -webkit-line-clamp: 5;
-            -webkit-box-orient: vertical;
-            text-overflow: ellipsis;
-        }
+    .tag {
+        font-family: "Zequid";
+        background: linear-gradient(To right, var(--fg-1), var(--fg-3));
+        color: transparent;
+        -webkit-background-clip: text;
+        background-clip: text;
+        font-weight: 700;
+        margin-bottom: var(--m-10);
+        font-size: 13px;
+        letter-spacing: 2px;
     }
 
-    .cont-links {
-        top: 20px;
-        left: 20px;
+    a {
         display: flex;
         align-items: center;
-        gap: var(--g-8);
-        z-index: 10;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        padding: var(--p-10);
+        border-radius: var(--rd-15);
+        font-size: 14px;
+        font-weight: 500;
+        color: var(--fg-1);
+        text-decoration: none;
 
-        .link {
-            padding: 4px var(--p-15);
-            font-size: 13px;
-            text-decoration: none;
+        svg {
+            width: 12px;
             color: var(--fg-1);
-            border-radius: var(--rd-8);
-            background-color: var(--br-1);
+            stroke-width: 3px;
+            -webkit-stroke-width: 3px;
+        }
+    }
 
-            &:hover { opacity: 0.8; }
+    .link-2 { right: 50px; }
+}
+
+.card-project {
+    padding-bottom: 300px;
+    .cont-image-project {
+        width: 100%;
+        height: 300px;
+        overflow: hidden;
+        position: absolute;
+        bottom: -10px; right: -25px;
+        border: 1px solid var(--fg-b-4);
+        border-radius: var(--rd-20) 0 0 0;
+
+        img { width: 120%; filter: brightness(0.8); }
+    }
+}
+
+.card-project-1, .card-project-2, .card-project-3, .card-project-4 { 
+    padding-bottom: var(--p-25);
+    .cont-image-project { display: none; }
+}
+
+.card-experience {  
+    .tag-date {
+        font-size: 12px;
+        margin: var(--m-10) 0;
+        color: var(--fg-1);
+        font-weight: 700;
+        padding: var(--p-5) var(--p-10);
+        border: 1px solid var(--fg-b-3);
+        border-radius: var(--rd-20);
+        box-shadow: inset 0 0 20px var(--fg-b-4);
+        font-family: "Zequid";
+    }
+
+    p { 
+        color: var(--fg-2);
+        display: -webkit-box;
+        -webkit-line-clamp: 3;
+        -webkit-box-orient: vertical;
+        text-overflow: ellipsis;
+        overflow: hidden;
+    }
+
+    .ilustrator {
+        width: 100%;
+        height: 230px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        border-radius: var(--rd-20);
+        border: 1px solid var(--fg-b-4);
+        position: relative;
+        overflow: hidden;
+
+        &::before {
+            position: absolute;
+            content: '';
+            bottom: -50px; left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
+            height: 100%;
+            background-image: url('/Stars.png');
+            background-size: 350px;
+            backdrop-filter: blur(1px);
         }
 
-        .link-tag {
-            &:hover { opacity: 1; }
+        div {
+            position: absolute;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            flex-wrap: wrap;
+            width: 120%;
+            top: 0; left: 50%;
+            transform: translateX(-50%);
+            gap: var(--g-5);
+            -webkit-mask-image: radial-gradient(var(--bg-1), transparent);
+            mask-image: radial-gradient(var(--bg-1), transparent);
+
+            .keyword {
+                padding: var(--p-8);
+                color: var(--fg-3);
+                border-radius: var(--rd-6);
+                border: 1px solid var(--bg-3);
+            }
+        }
+
+        .company-name {
+            font-size: clamp(80px, 8vw, 120px);
+            font-family: "Ankh";
+            color: var(--fg-b-2);
+            color: transparent;
+            stroke-width: 2px;
+            -webkit-text-stroke-width: 1px;
+            -webkit-text-stroke-color: var(--fg-1);
+            position: relative;
+        }
+
+        img { width: 150px; z-index: 10; }
+    }
+}
+
+.card-hacker {
+    width: 100%;
+    display: grid;
+    place-items: center;
+    gap: var(--g-15);
+    padding: var(--p-25);
+    border-radius: var(--rd-20);
+    backdrop-filter: blur(80px);
+    outline: 1px solid var(--br-2);
+    font-family: "Zequid";
+    overflow: hidden;
+
+    &::before {
+        position: absolute;
+        content: '';
+        top: 0; left: 200px;
+        width: 100%;
+        height: 250px;
+        background-image: url('/pattern.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        z-index: -10;
+    }
+
+    &::after {
+        position: absolute;
+        content: '';
+        bottom: 0; left: 0;
+        transform: rotate(180deg);
+        width: 100%;
+        height: 250px;
+        background-image: url('/pattern.png');
+        background-size: cover;
+        background-repeat: no-repeat;
+        z-index: -10;
+    }
+
+    h1 {
+        color: var(--fg-1);
+        font-size: clamp(25px, 8vw, 50px);
+        text-align: center;
+        font-family: inherit;
+        margin-top: 40px;
+    }
+
+    .cont-data {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        gap: var(--g-10);
+
+        .card-data {
+            display: grid;
+            place-items: center;
+            gap: var(--g-8);
+            color: var(--fg-1);
+            padding: var(--p-15) var(--p-20);
+            border-radius: var(--rd-10);
+            border: 1px solid var(--br-2);
+            backdrop-filter: blur(5px);
+            box-shadow: inset 0 0 10px var(--bg-3);
+            font-family: "Zequid";
+            overflow: hidden;
+            font-size: 25px;
+
+            &::before {
+                position: absolute;
+                content: '';
+                top: 0; left: 0;
+                width: 100%;
+                height: 100%;
+                background-image: url('/Noiss.avif');
+                background-size: 150px;
+                z-index: 1;
+            }
+
+            svg { 
+                position: absolute;
+                top: -1px; right: -1px;
+                padding: 7px;
+                width: 30px;
+                color: var(--fg-2);
+                border-left: 1px solid var(--br-2);
+                border-bottom: 1px solid var(--br-2);
+                background-color: var(--bg-2);
+                border-radius: 0 0 0 var(--rd-10);
+                stroke-width: 3px;
+                -webkit-stroke-width: 3px;
+            }
+
+            span { 
+                white-space: nowrap;
+                font-size: 12px;
+                color: var(--fg-2); 
+                font-family: inherit;
+                background: linear-gradient(To right, var(--fg-1), var(--fg-3));
+                color: transparent;
+                -webkit-background-clip: text;
+                background-clip: text;
+                letter-spacing: 2px;
+            }
         }
     }
 }
 
-.show-project { display: none; }
+@media screen and (max-width: 850px) {
+    .cont-data {
+        width: 100%;
+        display: flex !important;
+        flex-wrap: wrap;
+
+         .card-data {
+            width: 100%;
+            min-width: 150px;
+            flex: 1 1;
+         }
+    }
+
+    .card-experience .title {
+        font-size: var(--sz-2);
+    }
+}
