--- a/src/css/general.css
+++ b/src/css/general.css
@@ -1,20 +1,28 @@
-@import url('https://fonts.googleapis.com/css2?family=Archivo+Black&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Revalia&display=swap');
+
 
 :root {
     --bg-1: #000000;
-    --bg-2: #090909;
-    --bg-3: #141414;
+    --bg-2: #09090a;
+    --bg-3: #101010;
 
-    --br-1: #141419;
-    --br-2: #181a1e;
-    --br-3: #272930;
+    --br-1: #141516;
+    --br-2: #171819;
+    --br-3: #252627;
 
-    --fg-1: #e8e8e8;
-    --fg-2: #959595;
-    --fg-3: #3f424a;
-    --fg-4: #c3ff4a;
+    --fg-1: #dadae0;
+    --fg-2: #9d9ea1;
+    --fg-3: #262728;
 
-    --bg-bl-li-1: #4699ff0c;
+    --fg-b-1: #dadae0;
+    --fg-b-2: #ffffff40;
+    --fg-b-3: #ffffff2b;
+    --fg-b-4: #ffffff0f;
+
+    --fg-g-1: #c5ff9c;
+    --fg-g-2: #caffa561;
+    --fg-g-3: #caffa532;
+    --fg-g-4: #caffa524;
 
     --rd-4: 4px;
     --rd-6: 6px;
@@ -23,6 +31,7 @@
     --rd-15: 15px;
     --rd-20: 20px;
 
+    --g-5: 5px;
     --g-8: 8px;
     --g-10: 10px;
     --g-15: 15px;
@@ -43,20 +52,17 @@
     
     --sz-1: 15px;
     --sz-2: 17px;
-    --sz-3: 22px;
+    --sz-3: 19px;
 
     --fw-500: 500;
     --fw-600: 600;
-
-    --border-solid-1: 1px solid var(--br-1);
-    --border-solid-2: 1px solid var(--br-2);
-    --border-solid-3: 1px solid var(--br-3);
 }
+
 
 @font-face {
     font-family: "Red Hat Display";
     src: url('/font/RedHatDisplay-Medium.woff2') format(woff2);
-    font-weight: 500;
+    font-weight: 400;
     font-display: swap;
 }
 
@@ -71,6 +77,20 @@
     font-family: "Red Hat Display";
     src: url('/font/RedHatDisplay-Bold.woff2') format(woff2);
     font-weight: 900;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Ankh";
+    src: url('/font/Ankh.ttf') format(trueType);
+    font-weight: 900;
+    font-display: swap;
+}
+
+@font-face {
+    font-family: "Zequid";
+    src: url('/font/Zeniq.ttf') format(trueType);
+    font-weight: 600;
     font-display: swap;
 }
 
@@ -91,247 +111,223 @@ body {
     overflow-x: hidden;
 }
 
-.text-gradient-color {
-    background: linear-gradient(120deg, var(--bg-1), var(--fg-1) 30%, var(--fg-1) 60%, var(--bg-1) 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-}
-
-.text-gradient-color-sm {
-    background: linear-gradient(120deg, var(--fg-1) 10%, var(--bg-1) 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-}
-
-.text-gradient-color-mm {
-    background: linear-gradient(120deg, var(--fg-1) 80%, var(--bg-1) 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-}
-
-.text-gradient-color-ms {
-    background: linear-gradient(120deg, var(--bg-1) 0%, var(--fg-2) 10%,  var(--fg-2) 80%, var(--bg-1) 100%);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-}
+p { line-height: 1.7; font-weight: 600; }
 
 .container-home {
     width: 100%; 
     height: 100%;
-    overflow: hidden;
+    display: grid;
+
+    .lines {
+        position: relative;
+        width: 100%;
+        max-width: 1300px;
+        margin: 0 auto;
+        display: grid;
+        height: 100vh;
+        overflow: hidden;
+
+        &::before {
+            position: absolute;
+            content: '';
+            top: -200px; left: -200px;
+            width: 600px;
+            height: 600px;
+            border: 3px solid var(--fg-b-1);
+            border-radius: 50%;
+            box-shadow: inset 0 0 80px var(--fg-b-3);
+            z-index: -1;
+            filter: blur(50px);
+        }
     
+        &::after {
+            position: absolute;
+            content: '';
+            bottom: -300px; right: -200px;
+            width: 600px;
+            height: 600px;
+            border: 3px solid var(--fg-b-1);
+            border-radius: 50%;
+            box-shadow: inset 0 0 80px var(--fg-b-3);
+            z-index: -1;
+            filter: blur(50px);
+        }
+
+        .line {
+            position: absolute;
+            width: 20px;
+            height: 100%;
+            border-left: 1px solid var(--bg-3);
+            border-right: 1px solid var(--bg-3);
+            background-image: url('/Lines.svg');
+            background-size: 80px;
+            background-color: var(--bg-1);
+            z-index: 10;
+        }
+
+        .line-1 { top: 0; left: 0; }
+        .line-2 { top: 0; right: 0; }
+    }
+
     .scroll-sec {
         width: 100%; 
         height: 100%;
-        max-width: 1300px;
-        margin: 0 auto;
-        padding: 0 var(--p-20);
+        position: relative;
+        overflow: auto;
+        padding: 0 40px;
+
+        &::before {
+            position: absolute;
+            content: '';
+            top: 60px; left: 50%;
+            transform: translateX(-50%);
+            width: 100%;
+            height: 200px;
+            background: var(--bg-3);
+            background-image: url('/pattern.png');
+            background-size: cover;
+            background-repeat: no-repeat;
+            filter: contrast(1.13);
+            z-index: -2;
+            -webkit-mask-image: linear-gradient(To bottom, var(--bg-1) 60%, transparent);
+            mask-image:  linear-gradient(To bottom, var(--bg-1) 60%, transparent);
+        }
+
+        &::after {
+            display: none;
+            position: fixed;
+            content: '';
+            top: 0; left: 0;
+            width: 100%;
+            height: 100%;
+            background-image: url('/Noiss.avif');
+            background-size: 150px;
+            z-index: -1;
+        }
+
+        /* ====== Circles blur ====== */
+
+        .circle-blur {
+            z-index: -1;
+            position: absolute;
+            background-color: var(--bg-1);
+        }
     }
 }
 
-.float-line {
-    position: absolute;
-    content: '';
-    top: 90px;
-    width: 700px;
-    height: 700px;
-    z-index: -1;
-    border-top: 5px solid var(--fg-1);
-    border-left: 3px solid var(--fg-1);
-    border-right: 3px solid var(--fg-1);
-    box-shadow: inset 0 0 50px var(--fg-2);
-    -webkit-mask-image: linear-gradient(To bottom, var(--bg-1), transparent 90%);
-    mask-image: linear-gradient(To bottom, var(--bg-1), transparent 90%);
-    z-index: 10;
-}
-
-.float-line-1 {
-    top: 90%;
-    left: -500px;
-    transform: rotate(-130deg);
-}
-
-.float-line-1-sm {
-    top: 115%;
-    left: -650px;
-    transform: rotate(-130deg);
-}
-
-.float-line-2 {
-    top: 90%;
-    right: -500px;
-    transform: rotate(130deg);
-}
-
-.float-line-2-sm {
-    top: 115%;
-    right: -650px;
-    transform: rotate(130deg);
-}
-
-.float-line-3 {
-    top: 180%;
-    left: -500px;
-    transform: rotate(-130deg);
-}
-
-.float-line-3-sm {
-    top: 205%;
-    left: -650px;
-    transform: rotate(-130deg);
-}
-
-.float-line-4 {
-    top: 180%;
-    right: -500px;
-    transform: rotate(130deg);
-}
-
-.float-line-4-sm {
-    top: 205%;
-    right: -650px;
-    transform: rotate(130deg);
-}
-
-.skill-color-h1, .skill-color-h2, .skill-color-h3, .skill-color-h4, .skill-color-h5, .skill-color-h6 {
-    position: absolute;
-    width: 80px;
-    height: 80px;
-    border: 2px solid var(--fg-1);
-    padding: var(--p-20);
+.btn {
+    border: none;
+    display: grid;
+    place-content: center;
+    cursor: pointer;
+    text-decoration: none;
     border-radius: var(--rd-10);
-    z-index: 1;
+    background: linear-gradient(To bottom, var(--bg-2), var(--br-1));
+    box-shadow: inset 0 0 5px var(--br-3);
+    position: relative;
+    overflow: hidden;
+    gap: var(--g-8);
+    z-index: 10;
+    width: 50px;
+    height: 50px;
+
+    &::before {
+        position: absolute;
+        content: '';
+        bottom: 0; left: 50%;
+        transform: translateX(-50%);
+        width: 20px;
+        height: 2px;
+        border-radius: 50%;
+        filter: blur(2px);
+    }
+
+    span { font-size: 20px; };
+}
+
+.space-button {
+    border-radius: var(--rd-15);
+    background-color: var(--bg-1);
+    outline: 2px solid var(--bg-1);
+    background-color: var(--bg-3);
+    box-shadow: inset 0 5px 8px var(--bg-1);
+    padding: var(--p-8);
+    display: flex;
+    align-items: center;
+    gap: var(--g-10);
+    position: relative;
+
+    &::before {
+        position: absolute;
+        content: '';
+        bottom: -20px; left: 50%;
+        transform: translateX(-50%);
+        width: 5px;
+        height: 5px;
+        background: linear-gradient(40deg, #ff5a5a, #ff8657);
+        border-radius: 50%;
+    }
 
     &::after {
         position: absolute;
         content: '';
-        bottom: 0;
-        right: 0;
-        width: 100%;
-        height: 100%;
-        background-image: url('/Noiss.avif');
+        top: 50%; left: 50%;
+        transform: translate(-50%, -50%);
+        width: 140%;
+        height: 140%;
+        background: var(--br-3);
+        border-radius: 50%;
+        filter: blur(55px);
+        z-index: -1;
+    }
+}
+
+.space-button-htb {
+    &::before { background: linear-gradient(40deg, #bdff5a, #ffcf57); }
+}
+
+.btn-active { 
+    &::before {
+        background: linear-gradient(40deg, #ff5a5a, #ff8657);
     }
 
-    img {width: 100%; }
+    span { 
+        background: linear-gradient(40deg, #ff5a5a, #ff8657 40%, #ffc457);
+        color: transparent;
+        -webkit-background-clip: text;
+        background-clip: text;
+    };
 }
 
-.skill-color-h1, .skill-color-h2 {
-    top: 30%;
-    padding: var(--p-10);
+.btn-htb { 
+    &::before {
+        background: linear-gradient(40deg, #bdff5a, #ffcf57);
+    }
+
+    span { 
+        background: linear-gradient(40deg, #bdff5a, #cdff57 40%, #ffc457);
+        color: transparent;
+        -webkit-background-clip: text;
+        background-clip: text;
+    };
 }
 
-.skill-color-h1 {
-    left: 10%;
-    transform: rotate(-5deg);
-}
+footer { height: 50px; }
 
-.skill-color-h2 {
-    right: 10%;
-    transform: rotate(5deg);
-}
+@media (max-width: 1000px) {
+    .space-button {
+        border-radius: 10px;
 
-.skill-color-h3, .skill-color-h4 {
-    top: 60%;
-    width: 80px;
-    height: 80px;
-    padding: var(--p-15);
-}
+        &::after { filter: blur(45px); }
+    }
 
-.skill-color-h3 {
-    left: 15%;
-    transform: rotate(-5deg);
-}
+    .btn {
+        width: 35px;
+        height: 35px;
+        border-radius: 6px;
 
-.skill-color-h4 {
-    right: 15%;
-    transform: rotate(5deg);
-}
-
-.skill-color-h5, .skill-color-h6 {
-    top: 15%;
-    width: 70px;
-    height: 70px;
-    padding: var(--p-15);
-}
-
-.skill-color-h5 {
-    left: 25%;
-    transform: rotate(5deg);
-}
-
-.skill-color-h6 {
-    right: 25%;
-    transform: rotate(-5deg);
-}
-
-p { line-height: 1.6; }
-
-.cont-big-button {
-    display: flex;
-    gap: var(--g-10);
-
-    .btn-active {
-        border: none;
-        display: flex;
-        align-items: center; 
-        justify-content: center;
-        gap: var(--g-8);
-        cursor: pointer;
-        text-decoration: none;
-        white-space: nowrap;
-        color: var(--bg-1);
-        padding: var(--p-10) var(--p-20);
-        background: var(--fg-1);   
-        position: relative;
-        width: 135px;
+        &::before { width: 15px; }
         
-        &::before {
-            position: absolute;
-            content: '';
-            top: 50%;
-            left: 50%;
-            transform: translateY(-50%) translateX(-50%);
-            width: 200vw;
-            height: calc(100% + 2px);
-            border-top: 1px solid var(--br-1);
-            border-bottom: 1px solid var(--br-1);
-            z-index: -1;
-        }
-
-        & svg { 
-            width: 22px;
-            stroke-width: 2px;
-            -webkit-text-stroke-width: 2px;
-        }
-
-        &:hover { opacity: 0.8; }
-    }
-}
-
-footer { height: 70px; }
-
-@media (max-width: 1500px) {
-    .skill-color-h3, .skill-color-h4 { display: none; }
-}
-
-@media (max-width: 1300px) {
-    .skill-color-h1, .skill-color-h2 { 
-        width: 70px;
-        height: 70px;
-    }
-
-    .skill-color-h5, .skill-color-h6 { 
-        width: 60px;
-        height: 60px;
-    }
-}
-
-@media (max-width: 600px) {
-    .cont-big-button {
-        .social-media { display: none; }
+        span { font-size: 15px; }
     }
 }
