--- a/src/css/home.css
+++ b/src/css/home.css
@@ -2,59 +2,90 @@ nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    gap: var(--g-25);
     width: 100%;
-    padding: var(--p-10);
-    position: sticky;
-    top: 10px;
+    position: fixed;
+    top: 0; left: 50%;
+    transform: translateX(-50%);
+    padding: var(--p-15);
+    border-bottom: 1px solid var(--br-1);
     z-index: 100;
-    position: relative;
-        
-    &::before {
-        position: absolute;
-        content: '';
-        top: 0;
-        left: 50%;
-        transform: translateX(-50%);
-        width: 200vw;
-        height: 100%;
-        border-top: 1px solid var(--br-1);
-        border-bottom: 1px solid var(--br-1);
-    }
-    
-    a {
-        text-decoration: none;
-        color: var(--fg-2);
-        position: relative;
-
-        &:hover { opacity: 0.5; }
-    }
-
-    .active {
-        border-radius: var(--rd-6);
-        color: var(--bg-1);
-        background-color: var(--fg-1);
-        padding: var(--p-8) var(--p-20);
-    }
+    backdrop-filter: blur(20px);
 
     .row {
+        width: 100%;
         display: flex;
         align-items: center;
         gap: var(--g-10);
+        font-family: "Zequid";
+
+        &:nth-child(2) { justify-content: center; }
+        &:nth-child(3) { justify-content: flex-end; }
         
+        img { width: 35px; z-index: 10; }
+
         h1 {
+            font-size: 25px;
             color: var(--fg-1);
-            font-size: 22px;
-            font-weight: 900;
             text-transform: uppercase;
+            font-family: inherit;
         }
-    }
 
-    img { width: 40px; }
+        .anchor {
+            display: flex;
+            align-items: center;
+            position: relative;
+            gap: var(--g-5);
+            padding: 0 var(--p-5);
+            padding-right: var(--p-15);
+            text-decoration: none;
 
-    .nav-links {
-        display: flex;
-        align-items: center;
-        gap: var(--g-20);
+            font-family: inherit;
+            background: linear-gradient(To right, var(--fg-1), var(--fg-3));
+            color: transparent;
+            -webkit-background-clip: text;
+            background-clip: text;
+            font-size: 13px;
+            letter-spacing: 2px;
+        }
+
+        .button-anchor {
+            font-family: inherit;
+            text-align: center;
+            text-decoration: none;
+            color: var(--fg-1);
+            background: linear-gradient(To right, var(--bg-2), var(--bg-1));
+            box-shadow: inset 0 0 5px var(--bg-3);
+            border: 1px solid var(--br-1);
+            padding: var(--p-10) var(--p-20);
+            border-radius: var(--rd-6);
+            letter-spacing: 2px;
+            position: relative;
+            overflow: hidden;
+
+            &::before {
+                position: absolute;
+                content: '';
+                top: 0; left: 0;
+                width: 100%;
+                height: 100%;
+                background-image: url('/Noiss.avif');
+                background-size: 150px;
+                z-index: 1;
+            }
+
+            &::after {
+                position: absolute;
+                content: '';
+                top: 0; left: 0;
+                width: 100%;
+                height: 100%;
+                background-image: url('/Stars.png');
+                background-size: 200px;
+                background-repeat: no-repeat;
+                background-position: -20px -70px;
+            }
+        }
     }
 }
 
@@ -64,113 +95,94 @@ header {
     align-items: center;
     flex-direction: column;
     gap: var(--g-25);
-    padding: 200px 0;
-    padding-bottom: 0;
-
-    &::after {
-        position: absolute;
-        content: '';
-        top: 345px;
-        left: 50%;
-        transform: translateX(-50%) rotate(45deg);
-        width: 1300px;
-        height: 1300px;
-        z-index: -1;
-        border-top: 5px solid var(--fg-1);
-        border-left: 5px solid var(--fg-1);
-        box-shadow: inset 0 20px 50px var(--fg-2);
-        -webkit-mask-image: linear-gradient(135deg, var(--bg-1), transparent 30%);
-        mask-image: linear-gradient(135deg, var(--bg-1), transparent 30%);
-        z-index: -1;
-    }
-
-    .profile-photo {
-        width: 130px;
-        height: 130px;
-        border: 2px solid var(--fg-1);
-        border-radius: var(--rd-20);
-        position: relative;
-        
-        &::before {
-            position: absolute;
-            content: '';
-            top: 50%;
-            left: 50%;
-            transform: translateY(-50%) translateX(-50%);
-            width: calc(100% + 10px);
-            height: 2000vh;
-            border-left: 1px solid var(--br-1);
-            border-right: 1px solid var(--br-1);
-            z-index: -1;
-        }
-
-        img { 
-            position: absolute;
-            width: 100%;
-            left: 0;
-            bottom: 0;
-        }
-    }
+    padding: 150px 40px;
+    padding-bottom: 50px;
+    position: relative;
+    font-family: "Zequid";
     
-    .title {
-        width: 100%;
-        font-size: clamp(40px, 8vw, 70px);
-        text-transform: uppercase;
-        line-height: 1.1;
-        text-align: center;
-        max-width: 25ch;
-        white-space: nowrap;
-        z-index: 10;
+    h5 {
+        display: flex;
+        align-items: center;
+        gap: var(--g-5);
+        font-family: inherit;
+        background: linear-gradient(To right, var(--fg-1), var(--fg-3));
+        color: transparent;
+        -webkit-background-clip: text;
+        background-clip: text;
+        letter-spacing: 2px;
+
+        svg { width: 20px; color: var(--fg-1); }
     }
 
-    .subTitle {
-        max-width: 60ch;
+    .title {
+        color: var(--fg-1);
+        font-size: clamp(25px, 6vw, 70px);
         text-align: center;
-        font-size: var(--sz-2);
-        font-weight: 600;
+        line-height: 1.2;
+        font-family: inherit;
+        white-space: nowrap;
     }
 } 
-
-.navigate { height: 20px; }
 
 .title-section {
     width: 100%;
     display: grid;
     place-items: center;
     position: relative;
+    gap: var(--g-5);
     padding: 40px 0;
     margin-top: 60px;
 
+    .tag-sec { 
+        transform: translateX(calc(-50% - 130px));
+        width: 80px;
+        height: 1px;
+        z-index: 10;
+    }
+    
+    .tag-sec-experience, .tag-sec-service, .tag-sec-project, .tag-sec-hackthebox { 
+        background: linear-gradient(To left, var(--bg-1), var(--fg-b-1), var(--fg-b-1), var(--bg-1));
+    }
+    
     .title {
-        text-transform: uppercase;
         color: var(--fg-1);
-        font-size: clamp(25px, 5vw, 30px);
-        text-align: center;
+        font-size: clamp(25px, 3vw, 30px);
+        font-family: "Zequid";
         position: relative;
-
+        z-index: 1;
+        
         &::before {
             position: absolute;
             content: '';
             top: 50%;
-            left: 50%;
             transform: translateY(-50%) translateX(-50%);
             width: 200vw;
-            height: calc(100% + 2px);
-            border-top: 1px solid var(--br-1);
-            border-bottom: 1px solid var(--br-1);
+            height: calc(100% + 10px);
+            border-top: 1px solid var(--bg-3);
+            border-bottom: 1px solid var(--bg-3);
+            outline: 2px solid var(--bg-1);
+            background-image: url('/Lines.svg');
+            background-size: 80px;
             z-index: -1;
         }
     }
     
     .subTitle {
-        text-transform: uppercase;
+        margin-top: var(--m-15);
         text-align: center;
-        line-height: 1.8;
+        color: var(--fg-2);
         font-size: var(--sz-2);
-        max-width: 80ch;
+        line-height: 1.7;
+        max-width: 65ch;
+        font-weight: 400;
+        z-index: 10;
     }
 }
 
-@media (max-width: 800px) {
-    nav { .hide { display: none; } }
+@media screen and (max-width: 1100px) {
+    nav .row {
+        &:nth-child(2) {
+            display: none;
+        }
+    }
 }
